# hello-agents

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
config/: README.md  knowledge_qa.example.env
docs/: README.md  context_engineering.md  context_engineering_zh.md  knowledge_qa.md  knowledge_qa_build_and_usage_guide.md  knowledge_qa_design_zh.md  llm.md  memory_and_rag.md  memory_and_rag_zh.md
examples/: chat_agent_with_memory.py  chat_agent_with_rag.py  chat_agent_with_tavily.py  eval_dataset_demo.json  knowledge_qa_cli.py  llm_chat.py  react_agent_with_tavily.py
examples/knowledge_qa_demo_data/: 01_overview.md  02_architecture.md  03_operations.md  04_release_notes.md  README.md
frontend/knowledge-qa/: index.html  package-lock.json  package.json
frontend/knowledge-qa/src/: App.jsx  api.js  components.jsx  desktopBackend.js  i18n.js  runtime.js  styles.css
frontend/knowledge-qa/src-tauri/: Cargo.toml  tauri.conf.json
frontend/knowledge-qa/src-tauri/capabilities/: default.json
frontend/knowledge-qa/src-tauri/src/: lib.rs  main.rs
frontend/knowledge-qa/src/routes/: KnowledgeBaseDetailPage.jsx  KnowledgeBaseListPage.jsx
frontend/knowledge-qa/src/test/: App.test.jsx  setup.js
src/hello_agents/: __init__.py  agent.py  chat_agent.py  react_agent.py
src/hello_agents/apps/: __init__.py
src/hello_agents/apps/knowledge_qa/: __init__.py  agent.py  answer.py  api.py  api_schemas.py  classifier.py  cli.py  config.py  eval.py  evidence.py  ingest.py  input_check.py  inspector.py  llm_utils.py  models.py  planner.py  retrieve.py  runtime.py  service.py  store.py  trace.py  uploads.py
src/hello_agents/context/: __init__.py  engine.py  models.py
src/hello_agents/llm/: __init__.py  client.py  config.py  types.py
src/hello_agents/memory/: __init__.py  base.py  config.py  manager.py  models.py
src/hello_agents/memory/embeddings/: __init__.py  dashscope.py
src/hello_agents/memory/extractors/: __init__.py  llm.py  rule_based.py
src/hello_agents/memory/stores/: __init__.py  in_memory.py  neo4j_store.py  qdrant_store.py  redis_store.py  sqlite_store.py
src/hello_agents/memory/types/: __init__.py  episodic.py  procedural.py  semantic.py  working.py
src/hello_agents/rag/: __init__.py  config.py  indexer.py  models.py  qdrant_store.py  retriever.py
src/hello_agents/tools/: __init__.py  base.py  rag.py  registry.py  tavily.py
tests/: conftest.py  test_agent.py  test_chat_agent.py  test_context.py  test_embeddings.py  test_eval.py  test_knowledge_qa.py  test_knowledge_qa_api.py  test_knowledge_qa_cli.py  test_llm.py  test_memory.py  test_rag.py  test_react_agent.py  test_tools.py
