[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "hello-agents"
version = "0.1.0"
description = "A Python-based agent framework project."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Project Contributors" }
]
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.30.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "tavily-python",
  "uvicorn>=0.30.0",
  "markitdown",
  "qdrant-client",
]

[project.scripts]
hello-agents-knowledge-qa = "hello_agents.apps.knowledge_qa.cli:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hello_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
