[package]
name = "knowledge-qa-desktop"
version = "0.1.0"
description = "Desktop shell for the hello-agents Knowledge QA console"
authors = ["Project Contributors"]
edition = "2021"

[lib]
name = "knowledge_qa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
